// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelWithPercent /> matches snapshot with offset=0 1`] = `
"
<div class
     style=\\"display: inline-block; max-width: 100%;\\"
     data-tooltipped
     aria-describedby=\\"tippy-tooltip-1\\"
     data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
>
  <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover mb-0 pl-0 text-left\\">
    <span class=\\"mr-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span class=\\"components-label-name\\">
      foo:
    </span>
    <span class=\\"components-label-value\\">
      bar
    </span>
  </span>
  <div class=\\"progress components-labelWithPercent-progress mr-1\\">
    <div class=\\"progress-bar bg-warning\\"
         role=\\"progressbar\\"
         style=\\"width: 50%;\\"
         aria-valuenow=\\"50\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=25 1`] = `
"
<div class
     style=\\"display: inline-block; max-width: 100%;\\"
     data-tooltipped
     aria-describedby=\\"tippy-tooltip-2\\"
     data-original-title=\\"Click to only show alerts with this label or Alt+Click to hide them\\"
>
  <span class=\\"components-label badge badge-warning components-label-dark components-label-with-hover mb-0 pl-0 text-left\\">
    <span class=\\"mr-1 px-1 bg-primary text-white components-labelWithPercent-percent\\">
      25
    </span>
    <span class=\\"components-label-name\\">
      foo:
    </span>
    <span class=\\"components-label-value\\">
      bar
    </span>
  </span>
  <div class=\\"progress components-labelWithPercent-progress mr-1\\">
    <div class=\\"progress-bar bg-transparent\\"
         role=\\"progressbar\\"
         style=\\"width: 25%;\\"
         aria-valuenow=\\"25\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
    <div class=\\"progress-bar bg-warning\\"
         role=\\"progressbar\\"
         style=\\"width: 50%;\\"
         aria-valuenow=\\"50\\"
         aria-valuemin=\\"0\\"
         aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;
